# argos3-kilobot

./: data_file
src/examples/behaviors/: CMakeLists.txt  agentCDCIlocal.h  agentCDCIlocal_compare.c  agentCDCIlocal_resample.c
src/examples/experiments/: data_file  kilobot_ark_template_withVisualization_1m_global.argos  kilobot_ark_template_withVisualization_1m_local.argos  kilobot_trajectory.argos
src/examples/loop_functions/: ark.cpp  ark.h
